# chatbot-web-application-rs

./: Cargo.toml  README.md  chat_app.db  schema.sql
src/: error.rs  main.rs
src/models/: conversation.rs  message.rs  mod.rs
src/routes/: conversation.rs  message.rs  mod.rs  static_files.rs
static/: index.css  index.html
static/js/: conversation_search.js  main.js
