[package]
name = "actix-web-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
chrono = "0.4.31"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json= "1"
